# PixelCanvas

./: .gitignore  CMakeLists.txt  Cardinal_Spline_Documentation.md  Integrated_README.md  PixelCanvas.sln  PixelCanvas_SutherlandHodgman_README.md  README.md  Refactoring_README.md  build_pixelcanvas.bat  direct-build.bat  pixelcanvas.html  quick_fix_build.bat  simplified_fill.bat  use_clipping_demo.bat
PixelCanvas/: Circle.cpp  Circle.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  PixelCanvas.cpp  PixelCanvas.rc  PixelCanvas.vcxproj  PixelCanvas.vcxproj.filters  PolygonFill.cpp  PolygonFill.h  Resource.h  framework.h
PixelCanvas/x64/Debug/: PixelCanvas.exe.recipe  PixelCanvas.ilk  PixelCanvas.res  vc143.idb
PixelCanvas/x64/Debug/PixelCanvas.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PixelCanvas.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
direct-winapi/: ClippingDemo_Modified.cpp  PixelCanvas.cpp  PixelCanvas_fixed.cpp  PixelCanvas_fully_integrated.cpp  PixelCanvas_modified.cpp
include/: Circle.h  Circle2D.h  Clipping.h  Clipping2D.h  Curve.h  Curve2D.h  Fill2D.h  Graphics.h  Line.h  Line2D.h  LineClipping.h  PolygonClipping.h  filling.h
src/: Circle.cpp  Circle2D.cpp  Clipping.cpp  Clipping2D.cpp  ClippingImplementation.cpp  Convex&nonconvex&floodfill.cpp  Curve.cpp  Curve2D.cpp  Fill2D.cpp  Line.cpp  Line2D.cpp  filling.cpp
